[package]
name = "escrow"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
arrayref = "0.3.6"
solana-program = "=1.10.25"
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}
thiserror = "1.0.31"

[dev-dependencies]
assert_matches = "1.4.0"
solana-sdk = "=1.10.25"
solana-validator = "=1.10.25"
solana-logger = "=1.10.25"

[lib]
crate-type = ["cdylib", "lib"]
